# lagertha-api

./: .env.copy  .gitignore  Cargo.toml  LICENSE  README.md  init.sh
migrations/2024-03-28-090056_create_applications/: down.sql  up.sql
migrations/2024-03-28-090913_create_users/: up.sql
migrations/2024-03-28-102840_update_application_relations/: down.sql  up.sql
migrations/2024-03-28-103847_update_user_application_relations/: down.sql  up.sql
migrations/2024-03-28-135136_update_user_validations/: down.sql  up.sql
migrations/2024-03-28-213312_user_email_non_unique/: down.sql  up.sql
migrations/2024-03-29-094839_create_connexions/: down.sql  up.sql
migrations/2024-03-29-115127_create_revoked_tokens/: down.sql  up.sql
migrations/2024-03-29-115508_remove_user_agent_column_revoked/: down.sql  up.sql
migrations/2024-03-30-093339_user_forget_delay/: down.sql  up.sql
migrations/2024-04-02-085232_sentinels_clusters/: down.sql  up.sql
migrations/2024-04-03-223925_add_index_to_is_deleted/: down.sql  up.sql
migrations/2024-04-09-072610_user_login_non_unique/: down.sql  up.sql
migrations/2024-04-17-142042_create_ananymous_sentinels/: down.sql  up.sql
migrations/2024-05-24-075252_sentinel_size/: down.sql  up.sql
migrations/2024-05-24-131507_anonymous_sentinel_size/: down.sql  up.sql
open-search/: docker-compose.yml
redis-node/: docker-compose.yml  start.sh
src/: lib.rs  main.rs  schema.rs
src/commands/: create_application.rs  hsm_init.rs  init.rs  mod.rs
src/controlers/: anonymous_sentinel.rs  application.rs  auth.rs  cluster.rs  mod.rs  oauth.rs  oidc.rs  sentinel.rs  system.rs  user.rs
src/core/: api.rs  cli.rs  cors.rs  errors.rs  log.rs  mod.rs  nodes_config.rs  routes.rs  settings.rs
templates/: forget.html  unfamiliar_connexion.html  validation.html
(+119 files in other folders)
