[package]
name = "Lagertha_API"
version = "0.1.3"
edition = "2021"
description = "The Lagertha API is a comprehensive solution for managing encryption keys and performing encryption and decryption operations, dedicated to ensuring end-to-end encryption. This API enhances data security by handling all encryption processes client-side, thereby minimizing the exposure of sensitive data."

[dependencies]
diesel = { version = "2.1.5", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
rocket = { version = "0.5", features = ["json", "tls"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa-swagger-ui = { version = "7", features = ["rocket"] }
rocket_okapi = { features = ["swagger"], version = "0.8.0-rc.3" }
rocket_cors = "0.6"
neofiglet = "0.1.1"
regex = "1.10.4"
uuid = { version = "1.8", features = ["serde", "v4"] }
bcrypt = "0.15.1"
rand = "0.8.5"
once_cell = "1.19.0"
lazy_static = "1.4.0"
base32 = "0.5.0"
otp-rs = "0.1.1"
aes-gcm = "0.10.3"
pqc_kyber ={version = "0.7.1", features = ["kyber1024"]}
hex = "0.4.3"
rand_core = "0.6.4"
cryptoki = "0.6.2"
openssl = "0.10.64"
jsonwebtoken = "9.3.0"
redis = "0.25.2"
sha2 = "0.10.8"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
mail-send = "0.4.7"
otpauth = "0.4.1"
woothee = "0.13.0"
config = "0.14.0"
r2d2_redis = "0.14.0"
r2d2 = "0.8.10"
sharks = "0.5.0"
reqwest = { version = "0.12.3", features = ["json"] }
ring = "0.17.8"
base64 = "0.22.1"
pqcrypto-kyber = {version = "0.8.1", features = ["serialization"]}
ml-kem = "0.1.0"


[dependencies.rocket_sync_db_pools]
version = "0.1"
features = ["diesel_postgres_pool"]
